custom font added for navbar brand element

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -25,3 +25,8 @@ font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, 
     background: image_url('footer_lodyas.png');
      box-shadow: 0px 1px 3px #2a2a2a;
 }
+.navbar-inverse .navbar-brand {
+    color: #59E817;
+    font-family:'caviar_dreamsregular', sans-serif;
+    font-size: 26px;
+}
