--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -40,3 +40,6 @@ font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, 
     border-radius: 3px;
     padding: 2px 8px 2px 8px;
 }
+#map {
+height: 300px;
+}
