comment simple form added to show.html.erb

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -43,3 +43,6 @@ font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, 
 #map {
 height: 300px;
 }
+.clear {
+    clear: both;
+}
