--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -30,7 +30,14 @@
     <% end %>
     
     <br />
-
+    
+    <div class="booyah-box col-10 offset-1">
+      <%= simple_form_for @photo, url: '#' do |f| %>
+        <%= f.input :username %>
+        <%= f.input :password %>
+        <%= f.button :submit %>
+      <% end %>
+    </div> 
     
      <div class="float-right">
     <% if current_user && current_user == @place.user %>
