--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -31,20 +31,41 @@
     
     <br />
     
-    <div class="booyah-box col-10 offset-1">
-      <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
-        <%= f.input :picture %>
-        <%= f.input :caption %>
-        <%= f.button :submit %>
+ <!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Upload a photo</h4>
+      </div>
+       <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+        <div class="modal-body">
+          <%= f.input :picture %>
+          <%= f.input :caption %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <%= f.submit "Upload", class: 'btn btn-primary' %>
+        </div>
       <% end %>
-    </div> 
+    </div>
+  </div>
+</div>
     
-     <div class="float-right">
-    <% if current_user && current_user == @place.user %>
-        <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-        <%= link_to 'Delete', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger'%>
+    <div class="float-right">
+      <% if current_user && current_user == @place.user %>
+      <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+          Add photo
+        </button>
+      <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+      <%= link_to 'Delete', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger'%>
     <% end %>
   </div>
+
   <br class="clear" />
 </div>
 
