--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,21 +7,28 @@
         <p><%= place.description %></p><br />
         
         <% if place.user.present? %>
-            <small><%= place.user.email %></small>
+          <small><%= place.user.email %></small>
+        <% end %>
+        
+        
+        <% if place.photos.present? %>
+          <div class="col-12">
+          <b><%= image_tag place.photos.last.picture %></b> - 
+          </div>
         <% end %>
         
     
-<% if place.comments.present? %>
-  <div class="col-12">
-    <blockquote>
-      <% if place.comments.last.humanized_rating.present? %>
-        <b><%= place.comments.last.humanized_rating %></b> -
-      <% end %>
-      <%= place.comments.last.message %>
-      <small><%= place.comments.last.user.email %></small>
-    </blockquote>
-  </div>
-<% end %>
-</div>
-<% end %>
-<%= will_paginate @places %>
+    <% if place.comments.present? %>
+      <div class="col-12">
+        <blockquote>
+          <% if place.comments.last.humanized_rating.present? %>
+            <b><%= place.comments.last.humanized_rating %></b> -
+          <% end %>
+          <%= place.comments.last.message %>
+          <small><%= place.comments.last.user.email %></small>
+        </blockquote>
+      </div>
+    <% end %>
+    </div>
+    <% end %>
+    <%= will_paginate @places %>
