--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -22,11 +22,12 @@ body {
 font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 
 }
-.navbar {
+.navbar .navbar-inverse {
     background: image_url('footer_lodyas.png');
      box-shadow: 0px 1px 3px #2a2a2a;
+     margin-bottom: 0;
 }
-.navbar-inverse .navbar-brand {
+.navbar-brand {
     color: #59E817;
     font-family:'caviar_dreamsregular', sans-serif;
     font-size: 26px;
@@ -65,4 +66,21 @@ blockquote:before {
 
 blockquote p {
   display: inline;
+}
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+  max-height: 550px;
+  width: 100%;
+}
+.carousel-caption {
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  position: absolute;
+  left: 0;
+}
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
 }
