--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -84,3 +84,16 @@ blockquote p {
 .carousel {
   box-shadow: 0px 3px 8px #2a2a2a;
 }
+.custom-box {
+    margin-top: 0;
+    margin-right: 12px;
+    margin-bottom: 12px;
+    overflow: hidden;
+    position: relative;
+    vertical-align: top;
+    z-index: 1;
+
+}
+h6 {
+  padding-top: 12px;
+}
