--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -46,10 +46,12 @@
           <small><%= place.user.email %></small>
         <% end %>
         
+        <br /> <br />
+        
         
         <% if place.photos.present? %>
           <div class="col-12">
-          <b><%= image_tag place.photos.last.picture %></b> - 
+          <b><%= image_tag place.photos.last.picture, height: 425, width: 500 %></b> 
           </div>
         <% end %>
         
@@ -58,7 +60,7 @@
       <div class="col-12">
         <blockquote>
           <% if place.comments.last.humanized_rating.present? %>
-            <b><%= place.comments.last.humanized_rating %></b> -
+            <b><%= place.comments.last.humanized_rating %></b> 
           <% end %>
           <%= place.comments.last.message %>
           <small><%= place.comments.last.user.email %></small>
