--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -95,6 +95,23 @@
   </div>
 </div>
 
+<div class="clear"></div>
+
+<div class="booyah-box col-10 offset-1">
+  <div class="row">
+    <% @place.photos.each do |photo| %>
+      <div class="col -10">
+        <div class ="custom-box">
+        <%= image_tag photo.picture, height: 275, width: 300 %>
+        <h6 class ="text-left, ">"<%= photo.caption %> "</h6>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+<br />
+
 <div class="col-10 offset-1">
 <h1 class="float-left">Comments</h1>
 <!-- Button trigger modal -->
@@ -102,13 +119,8 @@
   Add a comment
 </button>
 </div>
-
 <div class="clear"></div>
-
-<% @place.photos.each do |photo| %>
-  <%= image_tag photo.picture, height: 300, width: 200 %>
-  <%= photo.caption %>
-<% end %>
+<br />
 
 <div class="row">
 <% @place.comments.each do |comment| %>
