--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -51,7 +51,7 @@
         
         <% if place.photos.present? %>
           <div class="col-12">
-          <b><%= image_tag place.photos.last.picture, height: 425, width: 500 %></b> 
+          <b><%= image_tag place.photos.last.picture, height: 425 %></b> 
           </div>
         <% end %>
         
