--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -102,7 +102,7 @@
     <% @place.photos.each do |photo| %>
       <div class="col -10">
         <div class ="custom-box">
-        <%= image_tag photo.picture, height: 275, width: 300 %>
+        <%= image_tag photo.picture, height: 275 %>
         <h6 class ="text-left, ">"<%= photo.caption %> "</h6>
         </div>
       </div>
