--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -101,10 +101,10 @@
   <div class="row">
     <% @place.photos.each do |photo| %>
       <div class="col -10">
-        <div class ="img-thumbnail">
+        <div class ="custom-box">
         <%= image_tag photo.picture, height: 275 %>
         </div>
-        <h6 class ="text-left, ">"<%= photo.caption %> "</h6>
+        <h6 class ="text-left, "><%= photo.caption %> </h6>
       </div>
     <% end %>
   </div>
