--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,19 +6,19 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <%= image_tag 'slider4.jpg', class:  'img-fluid' %>
+      <%= image_tag 'panini.jpg', class:  'img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
         <h3>Find the best food places</h3>
       </div>
     </div>
      <div class="carousel-item">
-      <%= image_tag 'slider2.jpg', class: 'img-fluid' %>
+      <%= image_tag 'apples.jpg', class: 'img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
         <h3>Find the best food places</h3>
       </div>
     </div>
      <div class="carousel-item">
-      <%= image_tag 'slider3.jpg', class: 'img-fluid' %>
+      <%= image_tag 'veggies.jpg', class: 'img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
         <h3>Find the best food places</h3>
       </div>
