--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
 </div>
 
 <br /><br />
-<h1 class="text-center">My Comments</h1>
+<h1 class="text-center" style="color:#069">My Comments</h1>
 <br /><br />    
     <div class="row">
     <% @user.comments.each do |comment| %>
@@ -36,7 +36,7 @@
 <div  class="clear"></div>
 
 <br /><br />
-<h2 class="text-center">My Places</h2>
+<h2 class="text-center" style="color:#069">My Places</h2>
 <br /><br />
 
 <% @user.places.each do |place| %>
@@ -52,7 +52,7 @@
         
         <% if place.photos.present? %>
           <div class="col-12">
-          <b><%= image_tag place.photos.last.picture %></b> - 
+          <b><%= image_tag place.photos.last.picture, class: 'img-fluid' %></b> - 
           </div>
         <% end %>
         
